--- a/API_KEY/.gitignore
+++ b/API_KEY/.gitignore
@@ -1,1 +1,6 @@
 githubKey.txt
+archgen-expanded-training-2.json
+archgen-training-set-2.json
+testrun4-SystemC-Files/
+testrun5-SystemC-Files/
+testrun6-SystemC-Files/
